fixed alignment on beta button

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ left: 60px;
 width: 200px;
 height: 67px;
 margin-left: 40%;
-margin-top: 30px;
+margin-top: 10px;
 justify-content: center;
 font-size: 20px;
 color: white;
